# SolveryCligame

./: CMakeLists.txt  cmake-variants.yaml  main.cpp
src/headers/: ApliedStatus.h  Astar.h  Boundary.h  Camera.h  Column.h  Coordinate.h  DamageReceived.h  Defs.h  DoubleDamage.h  GridIndex.h  Hero.h  Item.h  Monsters.h  MultipleCellObject.h  Object.h  PowerupItem.h  Screen.h  SingleCellObject.h  SingleCellObjectStatic.h  Spawner.h  SpeedUp.h  Status.h  UI.h  UtileFunctions.h  Wall.h
src/implementation/: ApliedStatus.cpp  Astar.cpp  Boundary.cpp  Camera.cpp  Column.cpp  Coordinate.cpp  DamageReceived.cpp  DoubleDamage.cpp  GridIndex.cpp  Hero.cpp  Item.cpp  LinuxMagic.cpp  Monsters.cpp  MultipleCellObject.cpp  Object.cpp  PowerupItem.cpp  Screen.cpp  SingleCellObject.cpp  SingleCellObjectStatic.cpp  Spawner.cpp  SpeedUp.cpp  UI.cpp  UtileFunctions.cpp  Wall.cpp
